@@ -1,6 +1,8 @@
 /*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2021 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,13 +22,11 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-
 package com.iluwatar.converter;
 
 import java.util.Collection;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 
 /**
@@ -73,7 +73,7 @@ public class Converter<T, U> {
    *     with the conversion function
    */
   public final List<U> createFromDtos(final Collection<T> dtos) {
-    return dtos.stream().map(this::convertFromDto).collect(Collectors.toList());
+    return dtos.stream().map(this::convertFromDto).toList();
   }
 
   /**
@@ -84,7 +84,7 @@ public class Converter<T, U> {
    *     with the conversion function
    */
   public final List<T> createFromEntities(final Collection<U> entities) {
-    return entities.stream().map(this::convertFromEntity).collect(Collectors.toList());
+    return entities.stream().map(this::convertFromEntity).toList();
   }
 
 }
