@@ -1,6 +1,8 @@
 /*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2021 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,11 +22,9 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-
 package com.iluwatar.datatransfer.product;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * The resource class which serves product information. This class act as server in the demo. Which
@@ -49,11 +49,11 @@ public class ProductResource {
    */
   public List<ProductDto.Response.Private> getAllProductsForAdmin() {
     return products
-        .stream()
-        .map(p -> new ProductDto.Response.Private().setId(p.getId()).setName(p.getName())
-            .setCost(p.getCost())
-            .setPrice(p.getPrice()))
-        .collect(Collectors.toList());
+            .stream()
+            .map(p -> new ProductDto.Response.Private().setId(p.getId()).setName(p.getName())
+                    .setCost(p.getCost())
+                    .setPrice(p.getPrice()))
+            .toList();
   }
 
   /**
@@ -63,10 +63,10 @@ public class ProductResource {
    */
   public List<ProductDto.Response.Public> getAllProductsForCustomer() {
     return products
-        .stream()
-        .map(p -> new ProductDto.Response.Public().setId(p.getId()).setName(p.getName())
-            .setPrice(p.getPrice()))
-        .collect(Collectors.toList());
+            .stream()
+            .map(p -> new ProductDto.Response.Public().setId(p.getId()).setName(p.getName())
+                    .setPrice(p.getPrice()))
+            .toList();
   }
 
   /**
@@ -75,12 +75,13 @@ public class ProductResource {
    * @param createProductDto save new product to list.
    */
   public void save(ProductDto.Request.Create createProductDto) {
-    products.add(new Product()
-        .setId((long) (products.size() + 1))
-        .setName(createProductDto.getName())
-        .setSupplier(createProductDto.getSupplier())
-        .setPrice(createProductDto.getPrice())
-        .setCost(createProductDto.getCost()));
+    products.add(Product.builder()
+            .id((long) (products.size() + 1))
+            .name(createProductDto.getName())
+            .supplier(createProductDto.getSupplier())
+            .price(createProductDto.getPrice())
+            .cost(createProductDto.getCost())
+            .build());
   }
 
   /**
